# glyph

./: Cargo.toml
glyph_core/: Cargo.toml
glyph_core/src/: commandline.rs  config.rs  cursor.rs  editor.rs  event_handler.rs  highlight.rs  lib.rs  statusline.rs  tab.rs  ui.rs  viewport.rs  window.rs
glyph_core/src/buffer/: marker.rs  mod.rs  vec_marker.rs
glyph_core/src/gutter/: absolute_line_gutter.rs  mod.rs  noop_line_gutter.rs  relative_line_gutter.rs
glyph_core/src/tui/: hover_popup.rs  mod.rs  tui_view.rs
glyph_core/src/window/: mod.rs
glyph_core/src/window/gutter/: absolute_line_gutter.rs  noop_line_gutter.rs  relative_line_gutter.rs
glyph_tui/: Cargo.toml
glyph_tui/src/: commandline.rs  diff.rs  editor.rs  event_handler.rs  main.rs  popup.rs  statusline.rs  view.rs
src/: cursor.rs  editor.rs  events.rs  main.rs  tab.rs
src/tui/: mod.rs
src/window/: mod.rs
