[workspace]
members = [ "glyph_core" , "glyph_tui"]
default-members = ["glyph_tui"]
resolver = "2"

[workspace.dependencies]
glyph_tui = { path = "glyph_tui" }
glyph_core = { path = "glyph_core" }

anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tokio = { version = "1.36.0", features = ["full"] }
# TODO: Move this to glyph_tui once we have our own Event trait
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures-timer = "3.0.2"
futures = "0.3.30"
futures-util = "0.3.30"

